# plotters-gpui

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: test.yml
examples/: 3d-plot.rs  3d-plot2.rs  animation-cosine.rs  animation-cpu.rs  area-chart.rs  mandelbrot.rs  normal-dist2.rs  plotters-gpui-plot.rs  stock.rs
placeholder/: Cargo.toml
src/: backend.rs  element.rs  lib.rs  line.rs  utils.rs
