[package]
name = "plotters-gpui"
version = "0.1.0"
edition = "2021"
authors = ["Jakku Sakura <qjk2001@gmail.com>"]
repository = "https://github.com/JakkuSakura/plotters-gpui"
description = "Plotting with gpui in Rust"
license = "MIT"

[dependencies]
parking_lot = "0.12.3"
tracing = "0.1"
plotters-backend = { git = "https://github.com/JakkuSakura/plotters", tag = "v0.3.7-gpui"}
gpui = { git = "https://github.com/zed-industries/zed", rev = "044eb7b99048e79da5aa3f2dd489ff3ed8f97a32" }
plotters = { git = "https://github.com/JakkuSakura/plotters", tag = "v0.3.7-gpui", optional = true }

# because plotters' font-kit might fail
[patch.crates-io]
pathfinder_simd = { git = "https://github.com/theoparis/pathfinder.git" }
plotters = { git = "https://github.com/JakkuSakura/plotters", tag = "v0.3.7-gpui" }
plotters-backend = { git = "https://github.com/JakkuSakura/plotters", tag = "v0.3.7-gpui" }

[dev-dependencies]
chrono = "0.4"
rand = "0.8.3"
rand_distr = "0.4.0"
rand_xorshift = "0.3.0"
sysinfo = "0.33"

[features]
default = ["plotters"]
plotters = ["dep:plotters"]
